--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -31,7 +31,7 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt_directory
-        path: openwrt-sdk*/bin/packages/mt7620/base
+        path: openwrt-sdk*/bin
 
     - name: Organize files
       id: organize
