--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -15,8 +15,8 @@ jobs:
         wget https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7620/openwrt-sdk-19.07.3-ramips-mt7620_gcc-7.5.0_musl.Linux-x86_64.tar.xz
         tar xvf openwrt-sdk*
         cd $FILE/package
-        git clone https://github.com/trojan-gfw/openwrt-trojan.git
-        mv openwrt-trojan/* ./
+        git clone https://github.com/trojan-gfw/openwrt-trojan.git package/trojan
+        git clone https://github.com/aa65535/openwrt-dns-forwarder.git package/dns-forwarder
     - name: 3
       run: |
         cd $FILE
