--- a/.github/workflows/s.yml
+++ b/.github/workflows/s.yml
@@ -72,10 +72,10 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
     
-    - name: use mtk feeds
-      run: |
-        cd openwrt && ./scripts/feeds update -f mtk
-        cd openwrt && ./scripts/feeds install -a -p mtk
+ #   - name: use mtk feeds
+ #     run: |
+ #       cd openwrt && ./scripts/feeds update -f mtk
+ #       cd openwrt && ./scripts/feeds install -a -p mtk
    
     - name: Setup Debug Session
       uses: P3TERX/debugger-action@master
