--- a/.github/workflows/s.yml
+++ b/.github/workflows/s.yml
@@ -76,9 +76,9 @@ jobs:
  #     run: |
  #       cd openwrt && ./scripts/feeds update -f mtk
  #       cd openwrt && ./scripts/feeds install -a -p mtk
-   
-    - name: Setup Debug Session
-      uses: P3TERX/debugger-action@master
+ #  
+ #   - name: Setup Debug Session
+  #    uses: P3TERX/debugger-action@master
 
     - name: Load custom configuration
       run: |
