--- a/.config
+++ b/.config
@@ -24,3 +24,5 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 # CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_wpad-mesh-openssl=y
+CONFIG_PACKAGE_wpad-mini=y
+# CONFIG_PACKAGE_wpad-openssl is not set
