--- a/.config
+++ b/.config
@@ -27,3 +27,6 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_wpad-mesh-openssl=y
 CONFIG_PACKAGE_wpad-mini=y
 # CONFIG_PACKAGE_wpad-openssl is not set
+# CONFIG_PACKAGE_luci-app-webadmin is not set
+# CONFIG_PACKAGE_luci-app-ddns is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
