--- a/.github/workflows/s.yml
+++ b/.github/workflows/s.yml
@@ -76,8 +76,8 @@ jobs:
  #       cd openwrt && ./scripts/feeds update -f mtk
  #       cd openwrt && ./scripts/feeds install -a -p mtk
  #  
- #   - name: Setup Debug Session
-#      uses: P3TERX/debugger-action@master
+    - name: Setup Debug Session
+      uses: P3TERX/debugger-action@master
 
     - name: Load custom configuration
       env:
