--- a/.github/workflows/s.yml
+++ b/.github/workflows/s.yml
@@ -77,7 +77,7 @@ jobs:
  #       cd openwrt && ./scripts/feeds install -a -p mtk
  #  
     - name: Setup Debug Session
-      uses: P3TERX/debugger-action@master
+      uses: P3TERX/debugger-action@main
 
     - name: Load custom configuration
       env:
