--- a/.github/workflows/lean-passwall.yml
+++ b/.github/workflows/lean-passwall.yml
@@ -91,8 +91,8 @@ jobs:
         cd openwrt
         ../$DIY_P2_SH
         ../$DIY_SH
-    - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@main
+#    - name: SSH connection to Actions
+#      uses: P3TERX/debugger-action@main
 #      if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
     - name: Download package
