--- a/.github/workflows/openclash.yml
+++ b/.github/workflows/openclash.yml
@@ -7,7 +7,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt k2 lean-passwall
+name: Build OpenWrt k2 openclash
 
 on:
   repository_dispatch:
